--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,49 @@
 {
-  "version": 2,
-  "builds": [
+  "functions": {
+    "app.js": {
+      "runtime": "nodejs18.x",
+      "maxDuration": 10
+    }
+  },
+  "rewrites": [
     {
-      "src": "app.js",
-      "use": "@vercel/node"
+      "source": "/v1/models",
+      "destination": "/app.js"
+    },
+    {
+      "source": "/v1/chat/completions",
+      "destination": "/app.js"
+    },
+    {
+      "source": "/debug",
+      "destination": "/app.js"
+    },
+    {
+      "source": "/",
+      "destination": "/app.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/app.js"
     }
   ],
-  "routes": [
+  "headers": [
     {
-      "src": "/v1/models",
-      "dest": "/app.js",
-      "methods": ["GET", "OPTIONS"]
-    },
-    {
-      "src": "/v1/chat/completions",
-      "dest": "/app.js", 
-      "methods": ["POST", "OPTIONS"]
-    },
-    {
-      "src": "/",
-      "dest": "/app.js",
-      "methods": ["GET"]
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/app.js"
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
+        }
+      ]
     }
   ]
 }
